test/cpls/errors/let-two-args.cpls
{
  "type": "CALL",
  "operator": {
    "type": "WORD",
    "name": "let",
    "offset": 0,
    "line": 1,
    "column": 1
  },
  "args": [
    {
      "type": "VALUE",
      "value": 1,
      "offset": 4,
      "line": 1,
      "column": 5
    }
  ]
}